--- a/index.html
+++ b/index.html
@@ -975,7 +975,8 @@ backgroundImage="<table width=130 border=0 cellspacing=0 cellpadding=0 align=lef
 							<td valign="top" align="left" width="321"><table width="321" cellspacing="0" cellpadding="0" border="0" valign="top">
 									<tr><td width="321" align="left" valign="top"><img src="http://web.archive.org/web/20041010202449im_/http://images.ea.com/sports/games/2004/tigerwoods/headers/headline.gif" width="321" height="61" border="0"></td>
 									</tr>
-									<tr><td width="321" align="left" valign="top"><table width="321" cellspacing="0" border="0" cellpadding="0" align="left"><tr><td width="5"><img src="http://web.archive.org/web/20041010202449im_/http://images.ea.com/p.gif" width="5" height="10"></td><td width="260"><span class="blacktext12">Happy 27th birthday, Josh! Thanks for being a fan since 2004. I'll be thinking of you time I'm out on the course and need a little extra spin on the ball. <b> - Tiger</b></span><br><br><br></td><td width="3"><img src="http://web.archive.org/web/20041010202449im_/http://images.ea.com/p.gif" width="3" height="10"></td></tr></table></td></tr>
+									<tr><td width="321" align="left" valign="top"><table width="321" cellspacing="0" border="0" cellpadding="0" align="left"><tr><td width="5"><img src="http://web.archive.org/web/20041010202449im_/http://images.ea.com/p.gif" width="5" height="10"></td><td width="260"><span class="blacktext12">Happy 27th birthday, Josh! Thanks for being a fan since 2004. I'll be thinking of you time I'm out on the course and need a little extra spin on the ball. 
+			<b> - Tiger Woods</b></span><br><br><br></td><td width="3"><img src="http://web.archive.org/web/20041010202449im_/http://images.ea.com/p.gif" width="3" height="10"></td></tr></table></td></tr>
 									<tr><td width="321" valign="top"><img src="http://web.archive.org/web/20041010202449im_/http://images.ea.com/p.gif" width="321" height="10"></td></tr>
 									
 									<tr><td width="321" valign="bottom">
