--- a/index.html
+++ b/index.html
@@ -232,151 +232,7 @@ makeMenu(TOTAL_NUM_MENUS);
 	
 
 
-<body marginheight="0" marginwidth="0" leftmargin="0" topmargin="0" bgcolor="#000033"><!-- BEGIN WAYBACK TOOLBAR INSERT -->
-<script type="text/javascript" src="http://web.archive.org/_static/js/timestamp.js" charset="utf-8"></script>
-<script type="text/javascript" src="http://web.archive.org/_static/js/graph-calc.js" charset="utf-8"></script>
-<script type="text/javascript" src="http://web.archive.org/_static/js/auto-complete.js" charset="utf-8"></script>
-<script type="text/javascript" src="http://web.archive.org/_static/js/toolbar.js" charset="utf-8"></script>
-<style type="text/css">
-body {
-  margin-top:0 !important;
-  padding-top:0 !important;
-  /*min-width:800px !important;*/
-}
-.wb-autocomplete-suggestions {
-    text-align: left; cursor: default; border: 1px solid #ccc; border-top: 0; background: #fff; box-shadow: -1px 1px 3px rgba(0,0,0,.1);
-    position: absolute; display: none; z-index: 2147483647; max-height: 254px; overflow: hidden; overflow-y: auto; box-sizing: border-box;
-}
-.wb-autocomplete-suggestion { position: relative; padding: 0 .6em; line-height: 23px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font-size: 1.02em; color: #333; }
-.wb-autocomplete-suggestion b { font-weight: bold; }
-.wb-autocomplete-suggestion.selected { background: #f0f0f0; }
-</style>
-<div id="wm-ipp-base" lang="en" style="display:none;direction:ltr;">
-<div id="wm-ipp" style="position:fixed;left:0;top:0;right:0;">
-<div id="wm-ipp-inside">
-  <div style="position:relative;">
-    <div id="wm-logo" style="float:left;width:130px;padding-top:10px;">
-      <a href="http://web.archive.org/web/" title="Wayback Machine home page"><img src="http://web.archive.org/_static/images/toolbar/wayback-toolbar-logo.png" alt="Wayback Machine" width="110" height="39" border="0" /></a>
-    </div>
-    <div class="r" style="float:right;">
-      <div id="wm-btns" style="text-align:right;height:25px;">
-                  <div id="wm-save-snapshot-success">success</div>
-          <div id="wm-save-snapshot-fail">fail</div>
-          <a href="#"
-             onclick="__wm.saveSnapshot('http://www.easports.com/games/tigerwoods2004/home.jsp?ncc=1', '20041010202449')"
-             title="Share via My Web Archive"
-             id="wm-save-snapshot-open"
-          >
-            <span class="iconochive-web"></span>
-          </a>
-          <a href="https://archive.org/account/login.php"
-             title="Sign In"
-             id="wm-sign-in"
-          >
-            <span class="iconochive-person"></span>
-          </a>
-          <span id="wm-save-snapshot-in-progress" class="iconochive-web"></span>
-        	<a href="http://faq.web.archive.org/" title="Get some help using the Wayback Machine" style="top:-6px;"><span class="iconochive-question" style="color:rgb(87,186,244);font-size:160%;"></span></a>
-	<a id="wm-tb-close" href="#close" onclick="__wm.h(event);return false;" style="top:-2px;" title="Close the toolbar"><span class="iconochive-remove-circle" style="color:#888888;font-size:240%;"></span></a>
-      </div>
-      <div id="wm-share">
-          <a href="http://web.archive.org/web/20041010202449/http://web.archive.org/screenshot/http://www.easports.com/games/tigerwoods2004/home.jsp?ncc=1"
-             id="wm-screenshot"
-             title="screenshot">
-              <span class="wm-icon-screen-shot"></span>
-          </a>
-	<a href="#" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=http://web.archive.org/web/20041010202449/http://www.easports.com:80/games/tigerwoods2004/home.jsp?ncc=1', '', 'height=400,width=600'); return false;" title="Share on Facebook" style="margin-right:5px;" target="_blank"><span class="iconochive-facebook" style="color:#3b5998;font-size:160%;"></span></a>
-	<a href="#" onclick="window.open('https://twitter.com/intent/tweet?text=http://web.archive.org/web/20041010202449/http://www.easports.com:80/games/tigerwoods2004/home.jsp?ncc=1&amp;via=internetarchive', '', 'height=400,width=600'); return false;" title="Share on Twitter" style="margin-right:5px;" target="_blank"><span class="iconochive-twitter" style="color:#1dcaff;font-size:160%;"></span></a>
-      </div>
-    </div>
-    <table class="c" style="">
-      <tbody>
-	<tr>
-	  <td class="u" colspan="2">
-	    <form target="_top" method="get" action="http://web.archive.org/web/submit" name="wmtb" id="wmtb"><input type="text" name="url" id="wmtbURL" value="http://www.easports.com/games/tigerwoods2004/home.jsp?ncc=1" onfocus="this.focus();this.select();" /><input type="hidden" name="type" value="replay" /><input type="hidden" name="date" value="20041010202449" /><input type="submit" value="Go" /></form>
-	  </td>
-	  <td class="n" rowspan="2" style="width:110px;">
-	    <table>
-	      <tbody>
-		<!-- NEXT/PREV MONTH NAV AND MONTH INDICATOR -->
-		<tr class="m">
-		  <td class="b" nowrap="nowrap"><a href="http://web.archive.org/web/20040902060525/http://www.easports.com:80/games/tigerwoods2004/home.jsp?ncc=1" title="02 Sep 2004"><strong>Sep</strong></a></td>
-		  <td class="c" id="displayMonthEl" title="You are here: 20:24:49 Oct 10, 2004">OCT</td>
-		  <td class="f" nowrap="nowrap"><a href="http://web.archive.org/web/20041209093253/http://www.easports.com:80/games/tigerwoods2004/home.jsp?ncc=1" title="09 Dec 2004"><strong>Dec</strong></a></td>
-		</tr>
-		<!-- NEXT/PREV CAPTURE NAV AND DAY OF MONTH INDICATOR -->
-		<tr class="d">
-		  <td class="b" nowrap="nowrap"><a href="http://web.archive.org/web/20040902060525/http://www.easports.com:80/games/tigerwoods2004/home.jsp?ncc=1" title="06:05:25 Sep 02, 2004"><img src="http://web.archive.org/_static/images/toolbar/wm_tb_prv_on.png" alt="Previous capture" width="14" height="16" border="0" /></a></td>
-		  <td class="c" id="displayDayEl" style="width:34px;font-size:24px;white-space:nowrap;" title="You are here: 20:24:49 Oct 10, 2004">10</td>
-		  <td class="f" nowrap="nowrap"><a href="http://web.archive.org/web/20041209093253/http://www.easports.com:80/games/tigerwoods2004/home.jsp?ncc=1" title="09:32:53 Dec 09, 2004"><img src="http://web.archive.org/_static/images/toolbar/wm_tb_nxt_on.png" alt="Next capture" width="14" height="16" border="0" /></a></td>
-		</tr>
-		<!-- NEXT/PREV YEAR NAV AND YEAR INDICATOR -->
-		<tr class="y">
-		  <td class="b" nowrap="nowrap"><a href="http://web.archive.org/web/20031008212338/http://www.easports.com:80/games/tigerwoods2004/home.jsp?ncc=1" title="08 Oct 2003"><strong>2003</strong></a></td>
-		  <td class="c" id="displayYearEl" title="You are here: 20:24:49 Oct 10, 2004">2004</td>
-		  <td class="f" nowrap="nowrap"><a href="http://web.archive.org/web/20060708005121/http://www.easports.com:80/games/tigerwoods2004/home.jsp?ncc=1" title="08 Jul 2006"><strong>2006</strong></a></td>
-		</tr>
-	      </tbody>
-	    </table>
-	  </td>
-	</tr>
-	<tr>
-	  <td class="s">
-	    	    <div id="wm-nav-captures">
-	      	      <a class="t" href="http://web.archive.org/web/20041010202449*/http://www.easports.com/games/tigerwoods2004/home.jsp?ncc=1" title="See a list of every capture for this URL">31 captures</a>
-	      <div class="r" title="Timespan for captures of this URL">08 Oct 2003 - 13 Jun 2013</div>
-	      </div>
-	  </td>
-	  <td class="k">
-	    <a href="#" id="wm-graph-anchor">
-	      <div id="wm-ipp-sparkline" title="Explore captures for this URL" style="position: relative">
-		<canvas id="wm-sparkline-canvas" width="625" height="27" border="0"></canvas>
-	      </div>
-	    </a>
-	  </td>
-	</tr>
-      </tbody>
-    </table>
-    <div style="position:absolute;bottom:0;right:2px;text-align:right;">
-      <a id="wm-expand" class="wm-btn wm-closed" href="#expand" onclick="__wm.ex(event);return false;"><span id="wm-expand-icon" class="iconochive-down-solid"></span> <span style="font-size:80%">About this capture</span></a>
-    </div>
-  </div>
-    <div id="wm-capinfo" style="border-top:1px solid #777;display:none; overflow: hidden">
-            <div style="background-color:#666;color:#fff;font-weight:bold;text-align:center">COLLECTED BY</div>
-    <div style="padding:3px;position:relative" id="wm-collected-by-content">
-            <div style="display:inline-block;vertical-align:top;width:50%;">
-			<span class="c-logo" style="background-image:url(https://archive.org/services/img/alexacrawls);"></span>
-		Organization: <a style="color:#33f;" href="https://archive.org/details/alexacrawls" target="_new"><span class="wm-title">Alexa Crawls</span></a>
-		<div style="max-height:75px;overflow:hidden;position:relative;">
-	  <div style="position:absolute;top:0;left:0;width:100%;height:75px;background:linear-gradient(to bottom,rgba(255,255,255,0) 0%,rgba(255,255,255,0) 90%,rgba(255,255,255,255) 100%);"></div>
-	  Starting in 1996, <a href="http://www.alexa.com/">Alexa Internet</a> has been donating their crawl data to the Internet Archive.  Flowing in every day, these data are added to the <a href="http://web.archive.org/">Wayback Machine</a> after an embargo period.
-	</div>
-	      </div>
-      <div style="display:inline-block;vertical-align:top;width:49%;">
-			<span class="c-logo" style="background-image:url(https://archive.org/services/img/alexa_dz)"></span>
-		<div>Collection: <a style="color:#33f;" href="https://archive.org/details/alexa_dz" target="_new"><span class="wm-title">Alexa Crawl DZ</span></a></div>
-		<div style="max-height:75px;overflow:hidden;position:relative;">
-	  <div style="position:absolute;top:0;left:0;width:100%;height:75px;background:linear-gradient(to bottom,rgba(255,255,255,0) 0%,rgba(255,255,255,0) 90%,rgba(255,255,255,255) 100%);"></div>
-	  Crawl DZ from Alexa Internet.  This data is currently not publicly accessible.
-	</div>
-	      </div>
-    </div>
-    <div style="background-color:#666;color:#fff;font-weight:bold;text-align:center" title="Timestamps for the elements of this page">TIMESTAMPS</div>
-    <div>
-      <div id="wm-capresources" style="margin:0 5px 5px 5px;max-height:250px;overflow-y:scroll !important"></div>
-      <div id="wm-capresources-loading" style="text-align:left;margin:0 20px 5px 5px;display:none"><img src="http://web.archive.org/_static/images/loading.gif" alt="loading" /></div>
-    </div>
-  </div></div></div></div><div id="donato" style="position:relative;width:100%;">
-  <div id="donato-base">
-    <iframe id="donato-if" src="https://archive.org/includes/donate.php?as_page=1&amp;transpiled=0&amp;referer=http%3A//web.archive.org/web/20041010202449/http%3A//www.easports.com/games/tigerwoods2004/home.jsp%3Fncc%3D1"
-	    scrolling="no" frameborder="0" style="width:100%; height:100%">
-    </iframe>
-  </div>
-</div><script type="text/javascript">
-__wm.bt(625,27,25,2,"web","http://www.easports.com/games/tigerwoods2004/home.jsp?ncc=1","2004-10-10",1996,"http://web.archive.org/_static/",['css/banner-styles.css','css/iconochive.css']);
-__wm.checkScreenShot("http://www.easports.com/games/tigerwoods2004/home.jsp?ncc=1", '20041010202449');
-</script>
-<!-- END WAYBACK TOOLBAR INSERT -->
+<body marginheight="0" marginwidth="0" leftmargin="0" topmargin="0" bgcolor="#000033">
 <center>
 				
 		
