--- a/index.html
+++ b/index.html
@@ -416,8 +416,7 @@ makeMenu(TOTAL_NUM_MENUS);
 
 <table cellspacing="0" cellpadding="0" border="0" bgcolor="#FFFFFF" width="766" align="center"><!--top part of big middle third-->
 			<tr>
-				<td width="137" height="70" valign="top" align="left"><img src="http://web.archive.org/web/20041010202449im_/http://images.ea.com/sports/games/2004/tigerwoods/headers/
-					01.gif" width="137" height="70" border="0" usemap="#sportsmain"></td>
+				<td width="137" height="70" valign="top" align="left"><img src="http://web.archive.org/web/20050224191431im_/http://images.ea.com/sports/games/2004/tigerwoods/headers/mainhdr01.gif" width="137" height="70" border="0" usemap="#sportsmain"></td>
 				
 				
 					<td width="351" valign="top" height="53" align="center"><a href="index.html"><img src="https://i.imgur.com/iFwaXXs.gif" width="629" height="70" border="0"></a></td>
